# Change log

Date          Version   Comment
2021/08/21    1.4.10    Support import of Word questions, convert GIF images, manage access to import/export facilities.
2021/07/14    1.4.9     Strip out unwanted markup inside Word document XML file.
2021/05/03    1.4.8     Support language markup in text.
2021/05/02    1.4.7     Don't impose heading cells in table head on export.
2021/04/10    1.4.6     Add support for Question bank import/export.
2021/04/07    1.4.5     Fix import of images in Word 2020 files.
2021/04/06    1.4.4     Improve support for Lesson import plugin.
2021/04/05    1.4.3     Fix coding error and PHPDocs warnings.
2021/04/05    1.4.2     Add support for Lesson import/export from and to Word files.
2021/04/03    1.4.1     Export to Word 2020/365 compatible format to support embedded images.
2021/03/27    1.4.0     Export embedded images for Word 2020/365 compatibility.
2021/02/24    1.3.3     Remove superfluous markup for bold and italic text.
2020/12/13    1.3.2     Add explicit warning about encoded images in exported Word files.
2020/08/02    1.3.1     Always clean namespaces when converting, to assist Glossary import plugin.
2020/07/04    1.3.0     Refactored Word to XHTML conversion into a class, for re-use elsewhere.
2018/12/09    1.2.8     Fix erroneous behaviour during Behat testing.
2018/08/06    1.2.7     Fix get_reason declaration in Privacy API code to make it more compatible with PHP 5/7.
2018/06/04    1.2.6     Support Privacy API for GDPR compliance.
2017/11/12    1.2.5     Handle headings with formatting properly, clean line-height property.
2017/10/23    1.2.4     Handle temporary Zip file folder correctly on import, fixed by Leon Stringer.
2017/09/05    1.2.3     Don't raise the memory limit for XSLT any more, fix coding standards errors.
2017/08/14    1.2.2     Handle list item duplication bug inside adjacent table cells.
2017/04/21    1.2.0     Use Bootstrap panel class for textboxes, use canonical tempdir reference.